Refactor CycleFinder to support source JAR inputs. This required updating CycleFinder's Options class to extend J2ObjC's Options, simplifying option parsing.
PiperOrigin-RevId: 808807627